@@ -365,7 +365,11 @@ appropriate support in their Fortran compiler.
 @note
   As an exception, the GCC plug-in based function instrumentation supports all
   filtering features when using the @verb{--instrument-filter} flag to the
-  @scorep instrumenter (see Sec. @secref{filtering}).
+  @scorep instrumenter. Though this instrumentation does not instrument
+  functions declared as @verb{inline} by default. But one can provide a filter
+  file, where functions in an explicit @verb{INCLUDE} rule, nevertheless will be
+  instrumented. This @verb{INCLUDE} is not allowed to be the @emph{match-all}
+  rule @verb{INCLUDE *} (see Sec. @secref{filtering}).
 
 Names provided for instrumented routines depend on the compiler, which may
 add underscores and other decorations to Fortran and C++ routine names, and
