@@ -233,9 +233,9 @@ ALIASES                = scorep=Score-P \
                          "necsx=NEC SX" \
                          papi=PAPI \
                          "seclabel{1}=\latexonly\label{sec:\1} \endlatexonly" \
-                         "secref{1}=\if LATEX \latexonly~\ref{sec:\1}\xspace \endlatexonly \else &thinsp; '@ref \1' &thinsp; \endif" \
+                         "secref{1}=\if LATEX \latexonly~\ref{sec:\1}\xspace \endlatexonly \else '@ref \1'\endif" \
                          "verb{1}=\latexonly\verb+\1+\endlatexonly\htmlonly<tt>\1</tt>\endhtmlonly" \
-                         "tabref{1}=\if LATEX \latexonly~\ref{tab:\1}\xspace \endlatexonly \else &thinsp; @ref \1 &thinsp; \endif" \
+                         "tabref{1}=\if LATEX \latexonly~\ref{tab:\1}\xspace \endlatexonly \else @ref \1\endif" \
                          "tablabel{1}=\latexonly\label{tab:\1}\endlatexonly" \
                          "htmlimg{3}=@anchor \2 @image html \1 \"Figure \2: \3\"" \
                          "teximg{4}=\latexonly\begin{figure}[hbt]\begin{center}\includegraphics[\4]{@abs_top_srcdir@/doc/images/\1}\caption{\3}\label{fig:\2}\end{center}\end{figure}\endlatexonly" \
